# CS442-Final-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
C/: main.cpp  mainShell.cpp
Python/: main.cpp  main.py
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  README.md  matrixBuilder.c  src.cpp  src.hpp
src/refs/: testReference.cpp  testReference.hpp
src/tests/: CMakeLists.txt  test_finalize.cpp  test_init.cpp  test_read.cpp  test_write.cpp
